@@ -86,11 +86,11 @@
 
 			<div id="game_selector">
 				<div id="home_controls">
-					<a id="lnk_add_to_library" href="#/Home/Add to Library">
-						<button>Add to Library</button>
+					<a id="lnk_add_to_library" href="#/Home/Add Games">
+						<button>Add Games</button>
 					</a>
-					<a id="lnk_my_library" href="#/Home/My Library">
-						<button>My Library</button>
+					<a id="lnk_my_library" href="#/Home/Games">
+						<button>Games</button>
 					</a>
 					<br />
 					<a id="lnk_remove_data" href="#/Home/Remove Data">
@@ -105,7 +105,39 @@
 					<img id="game_drop_loading" src="static/loading.gif" />
 				</div>
 				<div id="game_library">
-					<p>There are no games in your library.</p>
+					<div id="game_library_letters">
+						<span><a href="#/Home/Games/#">#</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/A">A</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/B">B</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/C">C</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/D">D</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/E">E</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/F">F</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/G">G</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/H">H</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/I">I</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/J">J</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/K">K</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/L">L</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/M">M</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/N">N</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/O">O</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/P">P</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/Q">Q</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/R">R</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/S">S</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/T">T</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/U">U</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/V">V</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/W">W</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/X">X</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/Y">Y</a>&nbsp;&nbsp;&nbsp;</span>
+						<span><a href="#/Home/Games/Z">Z</a>&nbsp;&nbsp;&nbsp;</span>
+					</div>
+					
+					<div id="game_library_list">
+						<p>There are no games in your library.</p>
+					</div>
 				</div>
 			</div>
 
